# raid_optimize

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .test.swp  CHANGELOG.md  Cargo.toml  README.md  test
.git-crypt/keys/default/0/: 0B0070947409128EF5177E7ACD7F8280C916D488.gpg
.github/: dependabot.yml
.github/workflows/: coverage.yml  main.yaml
data/: .heroes.xml.swp  heroes.xml  heroes.xml.save  heroes.xml.save2  layout.css
doc/: help.html  search-index.js  settings.html
doc/lib/: all.html  fn.add.html  fn.test.html  index.html  sidebar-items.js
doc/src/lib/: lib.rs.html
src/: bin.rs  hero.rs  input.rs  lib.rs  player.rs  run.rs  sim.rs  wave.rs
src/data/: class.rs  effect.rs  effects.rs  faction.rs  hero.rs  heroes.rs  instance.rs  mark.rs  mod.rs  passive.rs  rarity.rs  skill.rs  subskill.rs
src/data/skill/: mod.rs
src/derive_macro/: Cargo.toml
src/derive_macro/src/: lib.rs
src/hero/: effect.rs  effects.rs  faction.rs  instance.rs  mark.rs  mod.rs  passive.rs  skill.rs  stat.rs  statistics.rs  stats.rs  subskill.rs
src/hero/effects/: map.rs  mod.rs
src/hero/effects/buff/: attribute.rs  mod.rs
src/hero/effects/debuff/: attribute.rs  dot.rs  mod.rs
src/hero/effects/unique/: mod.rs
src/scheduler/: mod.rs
src/sim/: args.rs  mod.rs  results.rs  tests.rs
src/ui/: login.rs  mod.rs  user.rs
src/ui/app/: edit.rs  input.rs  mod.rs  run.rs
src/wave/: action.rs  attributes.rs  begin.rs  cleanse.rs  control.rs  damage.rs  dot.rs  effect.rs  faction.rs  find.rs  inflict.rs  mod.rs  passive.rs  print.rs  refresh.rs  remove.rs  restore.rs  shield.rs  skill.rs  stat.rs  turn_meter.rs
src/wave/attributes/: attack.rs  crit.rs  defense.rs  heal.rs  mastery.rs  mod.rs
src/wave/heroes/: alahan.rs  dakota.rs  geeliman.rs  hazier.rs  liz.rs  margarita.rs  marville.rs  maya.rs  mod.rs  natalie.rs  seth.rs  space.rs  tifya.rs
src/wave/heroes/agatha/: aristocratic_style.rs  bloody_spiral.rs  mod.rs
src/wave/heroes/alahan/: commendation.rs  detach.rs  mod.rs  spirit_call.rs  spirit_fountain.rs  tests.rs
src/wave/heroes/asindo/: mod.rs  psychological_torture.rs
src/wave/heroes/ben_austin/: inspiring_attack.rs  kings_benevolence.rs  kings_majesty.rs  (+2 more)
src/wave/passives/: mod.rs  sharp_instinct.rs
src/wave/skills/: mod.rs  subskills.rs
src2/: input.rs  lib.rs  player.rs  run.rs
src2/data/: heroes.rs  instance.rs  mark.rs  skill.rs  subskill.rs
src2/scheduler/: mod.rs
src2/sim/: results.rs
src2/ui/: login.rs
src2/ui/app/: edit.rs  input.rs  mod.rs
src2/wave/: begin.rs  damage.rs  dot.rs  mod.rs  print.rs  refresh.rs  shield.rs  stat.rs  turn_meter.rs
src2/wave/attributes/: defense.rs  heal.rs
src2/wave/heroes/: alahan.rs  dakota.rs  geeliman.rs  margarita.rs  marville.rs  mod.rs
src2/wave/skills/: subskills.rs
(+82 files in other folders)
