[package]
name = "raid_optimize"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "raid_optimize"
path = "src/lib.rs"

[[bin]]
name = "raid_optimize"
path = "src/bin.rs"

[dependencies]
serde_derive = "^1.0"
serde = "^1.0"
serde-xml-rs = "^0.3.1"
rand = "*"
log = "^0.4.20"
env_logger ="^0.10.0"
itertools ="^0.11.0"
argparse = "^0.2.2"
rayon = "^1.7.0"
indicatif = "^0.17.6"
prettytable-rs = "^0.10"
strum = "^0.25"
strum_macros = "^0.25"
enum-map = "^2.6"
enum-map-derive = "*"
