[package]
name = "raid_optimize"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "raid_optimize"
path = "src/lib.rs"

[[bin]]
name = "raid_optimize"
path = "src/ui/bin.rs"

[dependencies]
serde_derive = "^1.0"
serde = ">=1.0.100,<1.0.181" # from quick-xml
quick-xml = { version = "^0.30.0", features = ["serialize" ,"serde-types"] }
rand = "^0.8.5"
log = "^0.4.20"
env_logger ="^0.10.0"
itertools ="^0.11.0"
argparse = "^0.2.2"
rayon = "^1.7.0"
indicatif = "^0.17.6"
prettytable-rs = "^0.10"
strum = "^0.25"
strum_macros = "^0.25"
enum-map = "^2.6"
enum-map-derive = "^0.14.0"
tokio = { version = "^1.32.0", features = ["full"] }

chrono= "^0.4.31"
url ="^2.4.1"
reqwest = {version = "^0.11.20", features = ["json"]}
serde_json = "^1.0.107"
axum = "^0.6.20"
axum-server = "^0.5.1"
dioxus = "^0.4.0"
dioxus-router = "^0.4.0"
dioxus-liveview = { version = "^0.4.0", features = ["axum"] }
open = "^5.0.0"

#[profile.release]
#debug = true

[profile.release]
lto = true
opt-level = 3
